Revision history for Perl extension URI::db.

0.23
     - Added URI::clickhouse. Thanks to Ilia Rassadin for the PR (#18).

0.22 2024-04-05T01:38:17Z
     - Changed Oracle database DBI parameter generation as follows:
       - If there is not a hostname or port, just use the raw SID or service
         name as the database name: `dbi:Oracle:$name`. This is way 1 in the
         DBD::Oracle documentation
       - If there is a hostname or port, use the EZCONNECT syntax. This is
         way 3 in the DBD::Oracle documentation.
       Use of a port without a host name may not be valid, but it seems most
       prudent to build an EZCONNECT that includes the port in this context
       and to let Oracle or DBD::Oracle reject it if appropriate. Thanks
       again to @vectro for the and diligence, testing, and patience with
       this issue  (#22).

0.21 2023-05-09T22:18:52Z
     - Changed Oracle database DBI parameter name from `sid` to
       `service_name`. Thanks to @vectro for the report (#22).

0.20  2022-06-20T17:48:44Z
      - Added URI::cockroach and URI::yugabyte.

0.19  2018-07-19T15:15:04Z
      - Added URI::snowflake.

0.18  2017-11-03T15:01:43Z
      - Added URI::redshift to support db:redshift: URIs, thanks to a pull
        request from Steve Caldwell (PR #12).
      - Added URI::exasol, thanks to Johan Wärlander.

0.17  2016-02-03T18:35:33Z
      - Added URI::_ado, which subclasses URI::_odbc to provide a `dbi_dsn()`
        that returns a DSN using DBD::ADO. NOTE: This class is experimental,
        since I was unable to figure out the best default values for the
        connection string -- there are so many options! Feedback and
        recommendations wanted (Issue #11).
      - The `dbi_dsn` method of URI::mssql now supports a single argument to
        specify the DBI driver for which to return a DSN. Pass in "sybase" or
        "ado" (experimental) to get a DSN for either of those drivers,
        instead. Based on work by Dan Muey.
