@@ -2,6 +2,9 @@ Revision history for Perl extension URI::db.
 
 0.23
      - Added URI::clickhouse. Thanks to Ilia Rassadin for the PR (#18).
+     - Changed the MySQL (and MariaDB) URI `dbi_dsn()` method to use
+       DBD::MariaDB instead of DBD::mysql, because it better supports older
+       MySQL client libraries and improves Unicode support.
 
 0.22 2024-04-05T01:38:17Z
      - Changed Oracle database DBI parameter generation as follows:
